resolve Codaxy errors